@startuml
package biblio {

    class Estudiante {
        - static CORREO_FORMAT : String
        - static contadorEstudiantes : int
        --
        - nombre : String
        - curso : String
        - NIA : int
        - email : String
        - listaLibros : ArrayList<Libro>
        --
        + Estudiante(nombre : String, curso : String, email : String)
        + Estudiante(nombre : String)
        + obtenerTotalEstudiantes() : int
        + validarCorreo(correo : String) : boolean
        + insertarLibro(libro : Libro) : void
        + borrarLibro(libro : Libro) : void
    }

    class Editorial {
        - nombre : String
        - pais : String
        - listaLibrosEditoriales : ArrayList<Libro>
        --
        + Editorial(nombre : String, pais : String)
        + Editorial()
        + insertarLibro(libro : Libro) : void
        + borrarLibro(libro : Libro) : void
    }

    class Libro {
        - static cantidadLibros : int
        - static librosDisponibles : int
        + static CADENA_ID : String
        --
        - titulo : String
        - autor : String
        - id : String
        - disponible : boolean
        - editorial : Editorial
        - estudiantePrestado : Estudiante
        --
        + Libro(titulo : String, autor : String, editorial : Editorial)
        - calcularID() : String
        + prestar(estudiante : Estudiante) : Prestamo
        + devolver() : void
        + estaDisponible() : boolean
    }

    class Prestamo {
        - libro : Libro
        - estudiante : Estudiante
        - fecha : LocalDateTime
        --
        + Prestamo(libro : Libro, estudiante : Estudiante)

    }

}

' ===========================
'        RELACIONES
' *-- = composicion
' -- o o--o = bidireccional
' o--> = agregacion
' ===========================

Estudiante "1" -- "*" Libro : >
Libro "*" -- "1" Editorial : pertenece a >
Prestamo "1" o--> "1" Libro
Prestamo "1" o--> "1" Estudiante

@enduml
